# iron-layer

./: .gitignore  README.md  pyproject.toml  why-iron-layer.md
src/iron_layer/: cli.py
src/iron_layer/canary/: runner.py  system_prompt.py
src/iron_layer/pipeline/: batch.py  writer.py
src/iron_layer/signals/: normalize.py  schema.py
src/iron_layer/wildcard_mcp/: fake_results.py  server.py  tools.py
tests/: conftest.py  test_normalize.py  test_wildcard_mcp.py
tests/fixtures/injections/: aws_creds_staged.txt  benign.txt  etc_passwd.txt
